fix scrollbar

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -28,6 +28,11 @@ body.dark {
   --form-shadow: 0 2px 15px 0 rgba(26, 26, 27, 0.637);
 }
 
+/* ger rid of ugly scrollbar on Windows */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
 .dark hr {
   background: var(--hr);
 }
